--- a/CITATION.bib
+++ b/CITATION.bib
@@ -5,5 +5,6 @@
   month        = {February},
   booktitle    = {Proceedings of the iConference},
   location     = {Virtual Event},
-  topic        = {pd}
+  topic        = {pd},
+  doi          = {https://doi.org/10.1007/978-3-030-96957-8_34}
 }
